prevent messages from being blurred in lobby before game starts

--- a/client/src/css/styles.css
+++ b/client/src/css/styles.css
@@ -739,6 +739,10 @@ video {
   margin: 0px;
 }
 
+.m-2 {
+  margin: 0.5rem;
+}
+
 .-mx-1 {
   margin-left: -0.25rem;
   margin-right: -0.25rem;
@@ -899,6 +903,42 @@ video {
 
 .mt-auto {
   margin-top: auto;
+}
+
+.mr-32 {
+  margin-right: 8rem;
+}
+
+.mr-36 {
+  margin-right: 9rem;
+}
+
+.mr-24 {
+  margin-right: 6rem;
+}
+
+.mr-\[5\.5rem\] {
+  margin-right: 5.5rem;
+}
+
+.mr-\[9\.5rem\] {
+  margin-right: 9.5rem;
+}
+
+.mr-\[9\.25rem\] {
+  margin-right: 9.25rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
+}
+
+.mr-8 {
+  margin-right: 2rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .box-border {
@@ -1091,6 +1131,18 @@ video {
   height: 100vh;
 }
 
+.h-\[95\%\] {
+  height: 95%;
+}
+
+.h-\[97\%\] {
+  height: 97%;
+}
+
+.h-\[96\%\] {
+  height: 96%;
+}
+
 .max-h-96 {
   max-height: 24rem;
 }
@@ -1255,6 +1307,10 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[80\%\] {
+  width: 80%;
 }
 
 .min-w-36 {
@@ -1552,8 +1608,28 @@ video {
   overflow: hidden;
 }
 
+.overflow-clip {
+  overflow: clip;
+}
+
+.overflow-visible {
+  overflow: visible;
+}
+
+.overflow-scroll {
+  overflow: scroll;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
+}
+
 .overflow-x-hidden {
   overflow-x: hidden;
+}
+
+.overflow-y-hidden {
+  overflow-y: hidden;
 }
 
 .overflow-y-scroll {
@@ -2310,6 +2386,28 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-\[6px\] {
+  font-size: 6px;
+}
+
+.text-\[10px\] {
+  font-size: 10px;
+}
+
+.text-\[8px\] {
+  font-size: 8px;
+}
+
+.text-\[10px\]\/6 {
+  font-size: 10px;
+  line-height: 1.5rem;
+}
+
+.text-\[10px\]\/3 {
+  font-size: 10px;
+  line-height: .75rem;
 }
 
 .font-bold {
